--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -190,7 +190,7 @@
                                                                     <div class="col-xl-6 col-sm-12 col-12 my-2">
                                                                     <a href="/user/remove" class="text-black text-decoration-none">
                                                                       <div class="card">
-                                                                        <div class="card-body">
+                                                                        <div class="card-body shadows">
                                                                           <div class="d-flex justify-content-between">
                                                                             <div class="align-self-center">
                                                                               <i class="fa-solid fa-users text-warning fa-3x"></i>
@@ -207,7 +207,7 @@
                                                                     <div class="col-xl-6 col-sm-12 col-12 my-2">
                                                                         <a href="/song/remove" class="text-black text-decoration-none">
                                                                             <div class="card">
-                                                                                <div class="card-body">
+                                                                                <div class="card-body shadows">
                                                                                   <div class="d-flex justify-content-between px-md-1">
                                                                                     <div class="align-self-center">
                                                                                         <i class="fa-brands fa-soundcloud text-info fa-3x"></i>
@@ -224,7 +224,7 @@
                                                                       <div class="col-xl-6 col-sm-12 col-12  my-2">
                                                                         <a href="/artist/remove" class="text-black text-decoration-none">
                                                                         <div class="card">
-                                                                          <div class="card-body">
+                                                                          <div class="card-body shadows">
                                                                             <div class="d-flex justify-content-between">
                                                                               <div class="align-self-center">
                                                                                 <i class="fa-brands fa-napster text-success fa-3x"></i>
@@ -241,7 +241,7 @@
                                                                     <div class="col-xl-6 col-sm-12 col-12  my-2">
                                                                     <a href="/album/remove" class="text-black text-decoration-none">
                                                                       <div class="card">
-                                                                        <div class="card-body">
+                                                                        <div class="card-body shadows">
                                                                           <div class="d-flex justify-content-between">
                                                                             <div class="align-self-center">
                                                                                 <i class="fa-brands fa-algolia text-danger fa-3x"></i>
