--- a/views/user/remove.ejs
+++ b/views/user/remove.ejs
@@ -1,4 +1,4 @@
-<%- include("../partials/header.ejs") %>
+<%- include("../partials/favheader.ejs") %>
 <% let count = 1 %>
 <div class="col pt-4">
     <div class="container-fluid">
