--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -467,6 +467,13 @@ tr {
     color: #2e323c;
 } */
 
+.user--img{
+  height: 30px;
+  border-radius: 50px;
+  object-fit: cover;
+  aspect-ratio: 1/1;
+}
+
 .fa-user {
     color: rgb(255, 255, 255);
 }
