--- a/views/album/remove.ejs
+++ b/views/album/remove.ejs
@@ -1,4 +1,4 @@
-<%- include("../partials/header.ejs") %>
+<%- include("../partials/favheader.ejs") %>
 <% let count=1 %>
 <% let countsong=0 %>
 <div class="col pt-4">
