--- a/views/artist/artist-id.ejs
+++ b/views/artist/artist-id.ejs
@@ -19,7 +19,7 @@
         </div>
     </div>
    
-        <div class="container-fluid my-3 px-5">
+        <div class="container-fluid my-3">
             <table class="table text-white">
                 <tbody>
                     <% artistsong.forEach(function(artistsong){ %>
@@ -40,7 +40,7 @@
                             <td>
                                 <div class="option my-4 mx-2">
                                       <a>
-                                        <i class="fa-solid fa-play" id="table--playicon"></i>
+                                        <i class="fa-solid fa-play toblock" id="table--playicon"></i>
                                         <audio id="table--audio" preload="metadata">
                                           <source src="<%= artistsong.source %>" type="audio/mp3">
                                         </audio>
@@ -48,26 +48,26 @@
                                     <% if(currentUser) { %>
                                       <% if(usersong.includes(artistsong.id)){ %>
                                     <form action="/user/unfavourite/<%= artistsong.id %>" method="post" class="d-inline">
-                                        <button class="mx-3 bg-transparent border-0"> 
-                                          <i class="fa-solid fa-star mx-3 starbg"></i>
+                                        <button class="mx-3 bg-transparent border-0 toblock"> 
+                                          <i class="fa-solid fa-star starbg"></i>
                                         </button>
                                     </form>
                                     <% } else { %>
                                       <form action="/user/favourite/<%= artistsong.id %>" method="post" class="d-inline">
-                                        <button class="mx-3 bg-transparent border-0"> 
-                                          <i class="fa-solid fa-star mx-3"></i>
+                                        <button class="mx-3 bg-transparent border-0 toblock"> 
+                                          <i class="fa-solid fa-star"></i>
                                         </button>
                                     </form>
                                     <% } %>
                                     <% } else { %>
                                       <form action="/user/favourite/<%= artistsong.id %>" method="post" class="d-inline">
                                         <button class="mx-3 bg-transparent border-0"> 
-                                          <i class="fa-solid fa-star mx-3"></i>
+                                          <i class="fa-solid fa-star"></i>
                                         </button>
                                     </form>
                                     <% } %>
                                     <div class="dropdown d-inline">
-                                      <button class="btn btn-secondary dropdown bg-transparent border-0 toblock" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
+                                      <button class="btn btn-secondary dropdown bg-transparent border-0 toblock d-inline" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
                                         <i class="fa-solid fa-ellipsis-vertical main-menu"></i>
                                       </button>
                                       <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
